--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ ENDIF()
 
 FIND_PACKAGE(CUDA 6.5 REQUIRED)
 
+ADD_DEFINITIONS(-D_FORCE_INLINES)
+
 # Detect CUDA architecture and get best NVCC flags
 INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/cmake/FindCudaArch.cmake)
 SELECT_NVCC_ARCH_FLAGS(NVCC_FLAGS_EXTRA)
